@@ -193,6 +193,7 @@ false "Fortune" "$Fortune" "Display random quotes" \
 false "PiSafe" "$PiSafe" "Backup or Restore Raspberry Pi devices" \
 false "Weather" "$Weather" "Display weather conditions and forecast." \
 false "Timeshift" "$Timeshift" "Linux system backup utility." \
+false "Piapps" "$Piapps" "The most popular app store for Raspberry Pi computers." \
 --button="Exit":1 \
 --button="Check All and Continue":3 \
 --button="Next":2 > ${BASE}
@@ -203,7 +204,7 @@ exit
 fi
 
 if [ $BUT = 3 ]; then
-BASEAPPS=(DeskPi Argon X715 Log2ram ZramSwap Locate Plank Samba Webmin Screensaver Cqrprop Disks PiImager Neofetch CommanderPi RPiMonitor Fortune PiSafe JS8map Weather Timeshift Conky Gparted)
+BASEAPPS=(DeskPi Argon X715 Log2ram ZramSwap Locate Plank Samba Webmin Screensaver Cqrprop Disks PiImager Neofetch CommanderPi RPiMonitor Fortune PiSafe JS8map Weather Timeshift Conky Gparted Piapps)
 for i in "${BASEAPPS[@]}"
 do
 echo "$i" >> ${BASE}
