@@ -1,10 +1,11 @@
 version=1.1.13
 author=wb0sio
-LastUpdate=2022/01/21
+LastUpdate=2022/01/28
 
 1.1.13
 		2022/01/21 - Added ssd install and update scripts.
 							 - Added Conky, Gparted and Timeshift install options.
+		2022/01/28 - Added PiApps
 
 1.1.12
     2021/11/21 - Added PythonGPS to the radio menu.
